--- a/JURANI/app/src/main/res/layout/activity_random_task.xml
+++ b/JURANI/app/src/main/res/layout/activity_random_task.xml
@@ -10,7 +10,7 @@
     tools:context=".RandomTaskActivity">
 
     <android.support.v7.widget.Toolbar
-        android:id="@+id/player_toolbar"
+        android:id="@+id/random_task_toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:elevation="0dp"
