--- a/JURANI/app/src/main/res/layout/activity_chosen_player.xml
+++ b/JURANI/app/src/main/res/layout/activity_chosen_player.xml
@@ -24,6 +24,7 @@
         android:layout_weight="50"></LinearLayout>
 
     <TextView
+        android:id="@+id/chosen_text_1"
         android:layout_gravity="center_horizontal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -31,10 +32,10 @@
         android:textSize="21dp"
         android:textStyle="bold"
         android:textColor="@color/colorText"
-        android:fontFamily=""
         android:text="@string/text_turn_en" />
 
     <TextView
+        android:id="@+id/chosen_text_2"
         android:layout_gravity="center_horizontal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
